# trading-bot

./: .Dockerfile  .dockerignore  .env.example  .gitignore  ADVANCED.md  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
config/: settings.py
src/: main.py
src/backtest/: backtester.py
src/data/: mt5_provider.py  twelvedata_provider.py
src/execution/: mt5_executor.py  paper_trader.py
src/risk/: manager.py
src/strategy/: ema_vwap_strategy.py  indicators.py
tests/: test_execution.py  test_mt5.py  test_risk_manager.py  test_strategy.py  test_twelvedata.py  verify_setup.py
