[tool.poetry]
name = "forex-trading-bot"
version = "1.0.0"
description = "Forex Intraday Trading Bot con MT5, EMA/VWAP Strategy e Risk Management"
authors = ["Nabil Touri <nabilbrescia@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
MetaTrader5 = "^5.0.45"
twelvedata = "^1.2.11"
backtrader = "^1.9.78"
pandas = "^2.1.0"
numpy = "^1.25.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
schedule = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"